4}件
  File "<string>", line 80
    print(f
         ^
SyntaxError: '(' was never closed
